# anecdotario-commons-service

./: .gitignore  .python-version  API_DOCUMENTATION.md  CLAUDE.md  README.md  conftest.py  deploy-pipeline.sh  openapi.yaml  prompt.txt  pytest.ini  requirements-test.txt  response.json  response2.json  run_tests.py  samconfig-dev.toml  samconfig-prod.toml  samconfig-staging.toml  swagger.yaml  template.yaml  test_integration_final.py  test_integration_simple.py  test_integration_verification.py  test_nickname_integration_simple.py  test_nickname_simple.py  test_nickname_validation_integration.py  test_paginated_search.py  test_search_api.py
.aws-sam/: build.toml
anecdotario_commons/: __init__.py  decorators.py  logger.py  pyproject.toml  setup.py
docs/: USER_ORG_TABLE_DESIGN.md
events/: nickname-test-event.json  photo-upload-test-event.json
nickname-validate/: app.py  requirements.txt  test_enhanced_validation.py
photo-delete/: app.py  requirements.txt
photo-refresh/: app.py  requirements.txt
photo-upload/: TESTING_SUMMARY.md  app.py  app_refactored.py  demo_request_response_standalone.py  requirements.txt  simple_test_with_mocks.py  test_demo_request_response.py
pipeline/: buildspec.yml  deploy-dev-buildspec.yml  deploy-prod-buildspec.yml  deploy-staging-buildspec.yml  pipeline-template.yaml
shared/: .env.defaults  __init__.py  config.py  constants.py  decorators.py  error_handler.py  exceptions.py  logger.py  utils.py  validation_utils.py
user-org-create/: app.py  requirements.txt
user-org-delete/: app.py  requirements.txt
user-org-get/: app.py  (+1 more)
(+25 files in other folders)
